# MASA-Safe-RL

./: .gitignore  LICENSE  MANIFEST.in  README.md  conda-environment.yaml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: README.md  conf.py  custom.css  index.md  index.rst  pyproject.toml  requirements.txt
docs/API/: Constraints.md  DFA.md  Metrics.md  PCTL.md  Wrappers.md
docs/Algorithms/: CPO.md  On Policy.md  Overview.md  PPO Lagrangian.md  Shielded.md  Tabular.md
docs/Common/: Constraints.md  DFA.md  DFA.rst  LTL.md  LTL.rst  Metrics.md  PCTL.md  PCTL.rst  Wrappers.md
docs/Constraints/: Multi Agent.md  Reach Avoid.md  Stepwise Probabilistic.md
docs/Environments/: Multi Agent.md  Single Agent.md
docs/Get Started/: Basic Usage.md  Basic Usage.rst  Core Concepts.md  Quick Start.md
docs/Misc/: Probabilistic Shielding.md  Probabilistic Shielding.rst
docs/Tutorials/: Algorithms.md  Baselines.md  Basics.md  Constraints.md  Environments.md  LTL-Safety.md  Multi-Agent.md  Shielding.md  Wrappers.md
docs/_static/: custom.css
masa/: __init__.py  configs.yaml  run.py
masa/algorithms/: __init__.py
masa/cli/: cli_app.py
masa/common/: base_class.py  buffers.py  configs.py  dummy.py  label_fn.py  labelled_env.py  labelled_pz_env.py  layers.py  ltl.py  metrics.py  notebook_play.py  on_policy_algorithm.py  pctl.py  pettingzoo_record_video.py  policies.py  registry.py  running_mean_std.py  schedule.py  utils.py  wrappers.py
masa/configs/: defaults.yaml
masa/constraints/: ltl_safety.py  reach_avoid.py
masa/envs/: __init__.py  colour_grid_world.py  labelled_env.py  labelled_pz_env.py
masa/examples/: cpo_shield_example.py  dummy.py  norm_obs_example.py  prob_shield_cont_example.py  prob_shield_cont_ltl_example.py  prob_shield_example.py  prob_shield_frozen_lake_example.py  prob_shield_ltl_example.py  prob_shield_safety_abstraction_example.py  prob_shield_vec_ltl_example.py  record_video_example.py  reward_shaping_example.py  wandb_example.py
masa/logging/: metrics.py
masa/model_checking/: dfa.py  propositional_logic.py
masa/plotting/: README.md  __main__.py  api.py  config.py  io_utils.py  pipeline.py  plot.py  processing.py  render.py  run.py  source_registry.py  sources.py
masa/plugins/: helpers.py  supported.py
masa/prob_shield/: README.md  cpo_shield.py  eventual_discounted_vi.py  helpers.py  interval_bound_vi.py  parameterized_policy.py  parameterized_policy_v2.py  parameterized_ppo.py  parameterized_ppo_v2.py  prob_shield_wrapper_disc.py  prob_shield_wrapper_v1.py  prob_shield_wrapper_v2.py
notebooks/envs/: play_bridge_crossing.ipynb  play_cartpole.ipynb  play_colour_bomb_gridworlds.ipynb  play_colour_grid_world.ipynb  play_media_streaming.ipynb  play_mountain_car.ipynb  play_obstacles.ipynb  play_pacman_coins.ipynb  play_pacman_tabular.ipynb  play_roads.ipynb  play_safety_gridworlds.ipynb
notebooks/tutorials/: 01_first_masa_experiment.ipynb  02_labels_costs_and_infos.ipynb  03_wrapper_stack.ipynb  04_constraints_tour.ipynb  05_ltl_safety_colour_bomb.ipynb  (+7 more)
tests/: test_cmg.py  test_frozen_lake_shield.py  test_notebook_play.py  test_reach_avoid.py  test_record_video.py  test_sample.py  test_tutorial_notebooks.py
tutorial/: 01_minipacman_labelled_mdp_demo.ipynb  02_colour_bomb_product_mdp_demo.ipynb  03_pacman_coins_safety_abstraction_demo.ipynb  04_probabilistic_shielding_training_comparison.ipynb  README.md
(+239 files in other folders)
