[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MASA-Safe-RL"
version = "0.1.0"
description = "A Safe Reinforcement Library for providing a common interface for different constraints and environments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=1.1.1",
    "tensorflow==2.17.0",
    "tensorflow-probability==0.22.1",
    "tensorstore==0.1.65",
    "tf-keras==2.17.0",
    "numpy==1.26.4",
    "tensorboard>=2.17.1",
    "tqdm>=4.66.5",
    "jax==0.4.30",
    "optax>=0.1.9",
    "flax>=0.9.0",
    "ml-dtypes>=0.4.1",
    "ruamel.yaml<0.18.0",
]

[project.optional-dependencies]
docs = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.03",
]

[project.urls]
Homepage = "https://github.com/sacktock/MASA-Safe-RL"
Repository = "https://github.com/sacktock/MASA-Safe-RL"
Documentation = "https://sacktock.github.io/MASA-Safe-RL/"

[tool.setuptools]
include-package-data = true

[project.scripts]
masa = "masa:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["masa*"]