[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MASA-Safe-RL"
version = "0.1.0"
description = "A safe reinforcement library for providing a common interface for different constraints and environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "tensorflow>=2.20.0",
    "tensorflow-probability==0.25.0",
    "tensorstore>=0.1.65",
    "tf-keras>=2.17.0",
    "numpy>=1.26.4",
    "tensorboard>=2.17.1",
    "tqdm>=4.66.5",
    "jax>=0.4.30",
    "optax>=0.1.9",
    "flax>=0.9.0",
    "ml-dtypes>=0.4.1",
    "ruamel.yaml<0.18.0",
]

[project.urls]
Homepage = "https://github.com/sacktock/MASA-Safe-RL"
Repository = "https://github.com/sacktock/MASA-Safe-RL"
Documentation = "https://sacktock.github.io/MASA-Safe-RL/"

[tool.setuptools]
include-package-data = true

[project.scripts]
run_masa = "masa:run"

[tool.setuptools.packages.find]
include = ["masa", "masa.*"]

[dependency-groups]
cuda12 = [
    "jax[cuda12]>=0.4.30",
]
cuda13 = [
    "jax[cuda13]>=0.4.30",
]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
]
